--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
+    "@astrojs/vercel": "^7.4.0",
     "@xata.io/client": "^0.29.3",
     "astro": "^4.5.4",
     "typescript": "^5.4.2"
