--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/vercel": "^7.4.0",
     "@xata.io/client": "^0.29.3",
     "astro": "^4.5.4",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
     "firebase-tools": "^13.6.0",
     "typescript": "^5.4.2"
   }
